fixed html problem where html tag was not covering the whole page

--- a/src/pages/Skills/Skills.module.css
+++ b/src/pages/Skills/Skills.module.css
@@ -2,4 +2,29 @@
 
 .body {
     padding-top: 5rem;
+    position: relative;
+    left: 80px;
+    height: 50rem;
+    text-align: center;
+}
+
+.heading {
+    /* position: relative; */
+    left: 80px;
+    color: whitesmoke;
+}
+
+.skillsIntro {
+    height: 30rem;
+    background: #228B22;
+}
+
+.skills {
+    display: inline-block;
+    position: relative;
+    bottom: 10rem;
+    border-radius: 10px;
+    background: red;
+    height: 40rem;
+    width: 30rem;
 }
